working on post

--- a/src/pyespn/codebook.yaml
+++ b/src/pyespn/codebook.yaml
@@ -41,3 +41,6 @@ pro_teams:
   30: { abbr: "JAX", name: "Jacksonville Jaguars" }
   33: { abbr: "BAL", name: "Baltimore Ravens" }
   34: { abbr: "HOU", name: "Houston Texans" }
+
+
+# TODO: stat codes (ATT, INT, YDS, etc)
